# customer-churn-prediction

./: pyproject.toml
data/raw/: .gitignore  behavior.csv.dvc
notebooks/: 01_exploration_and_baseline.ipynb
