[project]
name = "customer-behavior"
version = "0.1.0"
description = "GTM Retail Intelligence MLOps Project"
authors = [
    {name = " jegonzalez56"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (<3.0.0)",
    "numpy (>=2.4.5,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "mlflow (>=3.12.0,<4.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.0,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "interrogate (>=1.7.0,<2.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]
